@@ -435,7 +435,7 @@ source "package/webif/Config.in"
 if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
 source "package/wget/Config.in"
 endif
-source "package/wireless-tools/Config.in"
+source "package/wireless_tools/Config.in"
 source "package/wpa_supplicant/Config.in"
 
 endmenu
